--- a/stepx/src/main/resources/templates/shop.html
+++ b/stepx/src/main/resources/templates/shop.html
@@ -174,20 +174,21 @@
                         </svg>
                       </button>
                     </a>
-                    
+
+                    <!--modal of carriage-->
                     <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#modallong">
                       <svg class="shopping-carriage">
                         <use xlink:href="#shopping-carriage"></use>
                       </svg>
                     </button>
-                                       
-                    <a href="/single-product/{{id}}">
-                      <button type="button" class="btn btn-light">
-                        <svg class="quick-view">
+                           
+                    <!--modal of preview-->
+                    <button type="button" class="btn btn-light" onclick="openModal('{{id}}')" data-bs-toggle="modal" data-bs-target="#modaltoggle">
+                      <svg class="quick-view">
                           <use xlink:href="#quick-view"></use>
-                        </svg>
-                      </button>
-                    </a>
+                      </svg>
+                  </button>
+                  
 
                   </div>
                 </div>
@@ -195,7 +196,7 @@
                 </div>
                 <div class="card-detail d-flex justify-content-between align-items-center mt-3">
                   <h3 class="card-title fs-6 fw-normal m-0">
-                    <a href="single-product.html">{{name}}</a>
+                    <a href="/single-product/{{id}}">{{name}}</a>
                   </h3>
                   <span class="card-price fw-bold">${{price}}</span>
                 </div>
@@ -210,6 +211,22 @@
     </div>
   </div>
 
+
+
+  <!-- quick view -->
+<div class="modal fade" id="modaltoggle" aria-hidden="true" tabindex="-1">
+  <div class="modal-dialog modal-fullscreen-md-down modal-md modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-body" id="modal-body-content">
+
+      </div>
+    </div>
+  </div>
+</div>
+<!-- / quick view -->
+
+  
+
   {{>footer}}
 
   
@@ -217,6 +234,7 @@
   <script src="/js/plugins.js"></script>
   <script src="/js/script.js"></script>
   <script src="/js/shop.js"></script>
+  <script src="/js/testModal.js"></script>
 
 
 </body>
