--- a/stepx/src/main/resources/templates/shop.html
+++ b/stepx/src/main/resources/templates/shop.html
@@ -176,14 +176,14 @@
                     </a>
 
                     <!--modal of carriage-->
-                    <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#modallong">
+                    <button type="button" class="btn btn-light" onclick="openModal('{{id}}','confirmation')" data-bs-toggle="modal" data-bs-target="#modaltoggle">
                       <svg class="shopping-carriage">
                         <use xlink:href="#shopping-carriage"></use>
                       </svg>
                     </button>
                            
                     <!--modal of preview-->
-                    <button type="button" class="btn btn-light" onclick="openModal('{{id}}')" data-bs-toggle="modal" data-bs-target="#modaltoggle">
+                    <button type="button" class="btn btn-light" onclick="openModal('{{id}}','quick')" data-bs-toggle="modal" data-bs-target="#modaltoggle">
                       <svg class="quick-view">
                           <use xlink:href="#quick-view"></use>
                       </svg>
@@ -225,6 +225,18 @@
 </div>
 <!-- / quick view -->
 
+<!--Cart confirmation Modal-->
+
+<div class="modal fade" id="cartConfirmationModal" aria-hidden="true" tabindex="-1" style="display: none;">
+  <div class="modal-dialog modal-fullscreen-md-down modal-md modal-dialog-centered" style="display: none;">
+    <div class="modal-content" style="display: none;">
+      <div class="modal-body" id="modal-body-content" style="display: none;">
+
+      </div>
+    </div>
+  </div>
+</div>
+<!--Cart confirmation Modal-->
   
 
   {{>footer}}
