--- a/stepx/src/main/resources/templates/partials/cart-confirmation-view.html
+++ b/stepx/src/main/resources/templates/partials/cart-confirmation-view.html
@@ -1,28 +1,36 @@
-
 {{#product}}
     <div class="message-confirmation">
-        <h1 style="text-align: center;">Do you want it in your order?</h1>
+        <h1 style="text-align: center; font-family:sans-serif; font-size:xx-large;">DO YOU WANT IT IN YOUR ORDER?</h1>
     </div>
-    <div class="image-confirmation">
-        <img src="{{images.0}}" alt="Product Image" style="width: 100%;max-height: 100%;">
-    </div>
-    <div class="col-lg-12 col-md-12">
-        <div class="size-confirmation">
-            <h3 style="text-align: center; margin-top: 3px;">Size: {{size}}</h3>
-        </div>
 
-        <div class="name-confirmation">
-            <h2 style="text-size-adjust:unset;">{{name}}</h2>
-        </div>
+    <div class="image-confirmation" style="position: relative; text-align: center;">
+        <img src="https://cdn-icons-gif.flaticon.com/6172/6172531.gif" 
+             alt="cart-image-confirmation" 
+             style="height: 150px; width: auto; display: block; margin: 0 auto;">
 
-        <div class="price-confirmation">
-            <p>${{price}}</p>
-        </div>
-        
-        <div class="description-confirmation">
-            <p>{{shortDescription}}</p>
+        <div style="margin-bottom: 4%;margin-left: 5%; margin-right: 5%;box-shadow: 0px 0px 7px 1px gray;display: flex; align-items: center; justify-content: center; gap: 20px; margin-top: 20px;">
+            <img src="{{images.0}}" 
+                 alt="Product Image" 
+                 style="width: 30%; max-height: 30%;">
+
+            <div class="info-confirmation" style="width: 50%; text-align: left; margin-top: 10px;">
+                <div class="name-confirmation" style="text-transform: uppercase;">
+                    <h4>{{name}}</h4>
+                </div>
+                <div class="size-confirmation">
+                    <p style="font-weight: 700; text-transform: uppercase;">SIZE: <strong style="color: black;">{{size}}</strong><p>
+                </div>
+                <div class="price-confirmation">
+                    <p style="font-weight: 700; text-transform: uppercase;">PRICE: <strong style="color: black;">${{price}}</strong></p>
+                </div>
+                <div class="description-confirmation">
+                    <p style="font-weight: 400; color: black;font-family: sans-serif;">{{shortDescription}}</p>
+                </div>
+            </div>
         </div>
     </div>
-    <button type="submit" class="btn btn-red hvr-sweep-to-right dark-sweep">
-        Add cart</button>
+
+    <button type="submit" class="btn btn-red hvr-sweep-to-right dark-sweep" style=" display: block;margin: 0 auto;" onclick="AddtoCart('{{id}}')" value="1269">
+        Add to cart
+    </button>
 {{/product}}
