--- a/stepx/src/main/resources/templates/partials/cart-confirmation-view.html
+++ b/stepx/src/main/resources/templates/partials/cart-confirmation-view.html
@@ -19,7 +19,7 @@
                     <h4>{{name}}</h4>
                 </div>
                 <div class="size-confirmation">
-                    <p style="font-weight: 700; text-transform: uppercase;">SIZE: <strong style="color: black;">{{size}}</strong><p>
+                    <p style="font-weight: 700; text-transform: uppercase;">SIZE: <strong style="color: black;">{{defaultSize}}</strong><p>
                 </div>
                 <div class="price-confirmation">
                     <p style="font-weight: 700; text-transform: uppercase;">PRICE: <strong style="color: black;">${{price}}</strong></p>
