--- a/stepx/src/main/resources/templates/shop.html
+++ b/stepx/src/main/resources/templates/shop.html
@@ -157,7 +157,7 @@
             <div class="col-lg-4 col-md-12 col-sm-12 mb-4 pe-3">
               <div class="product-card position-relative">
                 <div class="card-img">
-                  <img src="{{images.0}}" alt="product-item" class="product-image img-fluid">
+                  <img src="{{image1}}" alt="product-item" class="product-image img-fluid">
                   <div class="cart-concern position-absolute d-flex justify-content-center">
                   <div class="cart-button d-flex gap-2 justify-content-center align-items-center">
                     <!--Delete Buttom-->
