--- a/stepx/src/main/resources/templates/single-product.html
+++ b/stepx/src/main/resources/templates/single-product.html
@@ -84,7 +84,7 @@
             <div class="product-price py-3">
               <strong class="fs-5 fw-bold">${{price}}</strong>
             </div>
-            <p>{{shortDescription}}</p>
+            <p>{{shortdescription}}</p>
             <div class="cart-wrap padding-small">
               <div class="swatch product-select" data-option-index="1">
                 <h5 class="widget-title text-decoration-underline pe-2">Size:</h5>
