--- a/frontend/src/app/components/image-collage-big/image-collage-big.component.html
+++ b/frontend/src/app/components/image-collage-big/image-collage-big.component.html
@@ -1,49 +1,41 @@
-<section id="intro" class="position-relative mt-4">
-    <div class="container-lg">
-        <div class="swiper main-swiper">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <div class="card d-flex flex-row align-items-end border-0 large jarallax-keep-img">
-                        <img src="../../../assets/images/card-image1.jpg" alt="shoes" class="img-fluid jarallax-img">
-                        <div class="cart-concern p-3 m-3 p-lg-5 m-lg-5">
-                            <h2 class="card-title display-3 light">Urban Shoes</h2>
-                            <a href="/shop"
-                                class="text-uppercase light mt-3 d-inline-block text-hover fw-bold light-border">Shop
-                                Now</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="row g-4">
-                        <div class="col-lg-12 mb-4">
-                            <div class="card d-flex flex-row align-items-end border-0 jarallax-keep-img">
-                                <img src="../../../assets/images/card-large-item2.jpg" alt="shoes"
-                                    class="img-fluid jarallax-img">
-                                <div class="cart-concern p-3 m-3 p-lg-5 m-lg-5">
-                                    <h2 class="card-title style-2 display-4 light">Sports Wear</h2>
-                                    <a href="/shop"
-                                        class="text-uppercase light mt-3 d-inline-block text-hover fw-bold light-border">Shop
-                                        Now</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-12">
-                            <div class="card d-flex flex-row align-items-end border-0 jarallax-keep-img">
-                                <img src="../../../assets/images/banner-image5.jpg" alt="shoes"
-                                    class="img-fluid jarallax-img">
-                                <div class="cart-concern p-3 m-3 p-lg-5 m-lg-5">
-                                    <h2 class="card-title style-2 display-4 light">Casual Shoes</h2>
-                                    <a href="/shop"
-                                        class="text-uppercase light mt-3 d-inline-block text-hover fw-bold light-border">Shop
-                                        Now</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
+<section id="intro" class="mt-4">
+    <div class="container">
+      <div class="row g-3">
+        <!-- Imagen grande a la izquierda -->
+        <div class="col-lg-6">
+          <div class="position-relative" style="height: 650px; width: 620px;">
+            <img src="../../../assets/images/card-image1.jpg" alt="shoes" class="w-100 h-100"
+              style="object-fit: cover; border-radius: 10px;">
+            <div class="position-absolute text-white p-3" style="bottom: 70px; left: 70px;">
+              <h2 class="card-title display-3 light">Urban Shoes</h2>
+              <a href="/shop" class="text-uppercase light mt-3 d-inline-block text-hover fw-bold light-border">Shop
+                Now</a>
             </div>
+          </div>
         </div>
-        <div class="swiper-pagination"></div>
+        <!-- Dos imágenes a la derecha, una encima de otra -->
+        <div class="col-lg-6 d-flex flex-column justify-content-between">
+          <div class="position-relative mb-3" style="height: 310px;">
+            <img src="../../../assets/images/card-large-item2.jpg" alt="shoes" class="w-100 h-100"
+              style="object-fit: cover; border-radius: 10px;">
+            <div class="position-absolute text-white p-3" style="bottom: 80px; left: 70px;">
+              <h2 class="card-title display-3 light">Sport Wear</h2>
+              <a href="/shop" class="text-uppercase light mt-3 d-inline-block text-hover fw-bold light-border">Shop
+                Now</a>
+            </div>
+          </div>
+
+          <div class="position-relative" style="height: 310px;">
+            <img src="../../../assets/images/banner-image5.jpg" alt="shoes" class="w-100 h-100"
+              style="object-fit: cover; border-radius: 10px;">
+            <div class="position-absolute text-white p-3" style="bottom: 80px; left: 70px;">
+              <h2 class="h5 fw-bold">Casual Shoes</h2>
+              <a href="/shop" class="text-uppercase light mt-3 d-inline-block text-hover fw-bold light-border">Shop
+                Now</a>
+            </div>
+          </div>
+
+        </div>
+      </div>
     </div>
-</section>
+  </section>
